# bitbox

./: .gitignore  README.md  README.rst  api_reference.md  instructions.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tester.py
.github/workflows/: python-publish.yml
bitbox/: expressions.py
docker/3DI/: Dockerfile
docker/3DI_base/: Dockerfile
docs/: conf.py  index.rst
docs/index_references/: analysis.rst  coordination.rst  expressions.rst  face_backend.rst  kinematics.rst  utilities.rst
src/bitbox/: __init__.py  coordination.py  expressions.py  face_processor.py  kinematics.py
src/bitbox/face_backend/: __init__.py  backend3DI.py  functions3DI.py  reader3DI.py
src/bitbox/signal_processing/: __init__.py  basics.py  similarity  similarity.py  wavelets.py
src/bitbox/utilities/: __init__.py  caching.py  file_types.py  landmarks.py  signal_processing.py  symmetry_utilities.py
src/bitbox/utilities/Resource_Files/: landmark_region_mappers.json  landmark_region_mapping_reverse.json  landmark_test_input.json
tutorials/: example01_facial_processing.py  example02_activations.py  example02_expressions.py  example03_asymmetry_scores.py  example03_coordination.py  exampleV01_visualize_local_bases.py  tutorial01_facial_landmarks.py  tutorial02_facial_kinematics.py  tutorial03_facial_expressions.py
