[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitbox"
version = "2024.12dev"
authors = [
  { name="ComPsy Group", email="tuncb@chop.edu" },
]
maintainers = [
  {name = "ComPsy Group", email = "tuncb@chop.edu"}
]
description = "Behavioral Imaging Toolbox"
keywords = ["computer vision", "psychology", "psychiatry", "behavior", "facial expressions", "body actions"]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    'scipy',
    'cvxpy',
    'numpy',
    'scikit-learn',
    'python-dateutil',
    'PyWavelets',
    'matplotlib',
    'pandas'
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/compsygroup/bitbox"
Documentation = "https://github.com/compsygroup/bitbox/wiki"
Issues = "https://github.com/compsygroup/bitbox/issues"