[metadata]
name = bitbox
version = 0.1
author = ComPsy Group
author_email = tuncb@chop.edu
description = Behavioral Imaging Toolbox
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Computational-Psychiatry/bitbox
license = GPL-3.0

[options]
packages = find:
python_requires = >=3.6
install_requires =
    # List of required packages